# voice-clonergen

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
apps/api/: go.mod  go.sum
apps/api/cmd/server/: main.go
apps/api/internal/auth/: auth.go
apps/api/internal/config/: config.go
apps/api/internal/db/migrations/: 001_init.sql
apps/api/internal/generation/: repository.go  service.go
apps/api/internal/http/: generation.go  respond.go  router.go  voices.go
apps/api/internal/models/: models.go
apps/api/internal/queue/: queue.go
apps/api/internal/rpc/: inference.go
apps/api/internal/storage/: storage.go
apps/api/internal/voices/: repository.go  service.go
apps/inference-worker/: README.md  pyproject.toml
apps/inference-worker/src/: config.py  db.py  worker.py
apps/inference-worker/src/audio/: merge.py  normalize.py  placeholder.py  preprocess.py  text.py  vad.py  validation.py
apps/inference-worker/src/jobs/: benchmark.py  generate.py  preprocess.py
apps/inference-worker/src/models/: __init__.py  base.py  qwen3_tts.py  xtts_v2.py
apps/web/: package-lock.json  package.json
apps/web/src/: main.jsx  styles.css
infra/docker/: api.Dockerfile  inference-worker.Dockerfile  web.Dockerfile
infra/runpod/: README.md
infra/scripts/: apply-migrations.ps1
proto/: inference.proto
